// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    {
      "className": "orion-fusion-theme",
    }
  }
>
  <Item
    label="1st Option"
    onSelect={[Function]}
    requestClose={[Function]}
  >
    <li
      className="item orion-fusion-theme"
      onClick={[Function]}
      role="menuitem"
      tabIndex="0"
    >
      1st Option
    </li>
  </Item>
</ThemeContextProvider>
`;

exports[`Item renders a default item 1`] = `
<li
  className="item"
  onClick={[Function]}
  role="menuitem"
  tabIndex="0"
>
  1st Option
</li>
`;

exports[`Item renders an active item 1`] = `
<li
  className="item active"
  onClick={[Function]}
  role="menuitem"
  tabIndex="0"
>
  1st Option
</li>
`;
